@@ -5,6 +5,8 @@ import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
 @Repository
 public class InMemoryBookRepository implements BookRepository {
     @Override
@@ -12,12 +14,16 @@ public class InMemoryBookRepository implements BookRepository {
         return DataHolder.books;
     }
 
+
     @Override
     public List<Book> searchBooks(String text, Double rating) {
         return DataHolder.books.stream()
-                .filter(b -> (text == null || b.getTitle().toLowerCase().contains(text.toLowerCase()))
-                        && (rating == null || b.getAverageRating() >= rating))
-                .toList();
+                .filter(book ->
+                        (text == null || text.isEmpty() ||
+                                book.getTitle().toLowerCase().contains(text.toLowerCase())) &&
+                                (rating == null || book.getAverageRating() >= rating)
+                )
+                .collect(Collectors.toList());
     }
 }
 
